argocd-applications/immich/immich_resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
  name: immich-server
  namespace: immich
spec:
  rules:
  - host: photos.dani-porto.com
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: immich-application-server
            port:
              number: 2283
  tls:
  - hosts:
    - photos.dani-porto.com
    secretName: immich-cert # < cert-manager will store the created certificate in this secret.
